# Aegis

./: .gitignore  .golangci.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.mod  go.sum
.github/workflows/: ci.yml
cmd/aegisctl/: main.go
cmd/aegisd/: main.go
conformance/: runner.go  runner_test.go
conformance/packs/: baseline-safety.yaml  handoff-correctness.yaml  path-traversal.yaml  prompt-injection.yaml  replay-determinism.yaml  telemetry-no-egress.yaml
deploy/: aegisd.service  docker-compose.dev.yml  docker-compose.prod.yml
deploy/config/: aegis.dev.yaml  aegis.prod.yaml
docs/: backup-restore.md  concepts.md  conformance.md  getting-started.md  hardening.md  manifest.md  policy.md  python-sdk.md
integration/: integration_test.go
internal/config/: config.go  config_test.go
internal/server/: server.go  server_test.go
pkg/approval/: approval.go  approval_test.go
pkg/canon/: canon.go  canon_test.go
pkg/eventlog/: envelope.go  envelope_test.go  validator.go  validator_test.go
pkg/loop/: detector.go  detector_test.go
pkg/manifest/: manifest.go  manifest_test.go
pkg/openclaw/: adapter.go  adapter_test.go
pkg/policy/: engine.go  engine_test.go
pkg/proxy/: http.go  mcp.go  mcp_test.go  stdio.go
pkg/replay/: replay.go  replay_test.go
pkg/schema/: events.proto  store.proto
pkg/store/: store.go
pkg/taint/: taint.go  taint_test.go
pkg/telemetry/: patterns.go  telemetry.go  (+1 more)
python/: pyproject.toml
python/aegis_sdk/: __init__.py  canon.py  client.py  envelope.py
python/tests/: test_canon.py  test_envelope.py
(+7 files in other folders)
