[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-sdk"
version = "0.1.0"
description = "Aegis agent control plane Python SDK"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-timeout>=2.3",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aegis_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60

[tool.ruff]
line-length = 100
target-version = "py311"
